# numerical-ks-calculator

./: CMakeLists.txt  LICENSE  README.md
include/: active_medium.hpp  active_medium_functiods.hpp  beam_model.hpp  chamber.hpp  config.hpp.in  functions.hpp  loop_template.hpp  msvc_preheader.hpp  settings.hpp
input/: AdvMarkus_chamber.txt  AdvMarkus_kammer.txt  PinPoint_chamber.txt  active_medium_air_with_direct.txt  magBoltz_30humidAir_electron_mobility_spline.txt  markus_dose_runs.cfg  markus_time_runs.cfg  reaction_rate_hoch_boiss_spline_extrapolated.txt  sample_simu_config.cfg
src/: active_medium.cpp  active_medium_functiods.cpp  beam_model.cpp  chamber.cpp  functions.cpp  main.cpp
